# QPhotoEdit

./: CMakeLists.txt  README.md
src/: main.cpp  qml.qrc  qtquickcontrols2.conf
src/algorithm/: binarize.cpp  binarize.h  blur_img.cpp  blur_img.h  convert_color.cpp  convert_color.h  effect.cpp  effect.h  equalize_histogram.cpp  equalize_histogram.h  filter.cpp  filter.h  flip_img.cpp  flip_img.h  rotate_img.cpp  rotate_img.h  sharpen_img.cpp  sharpen_img.h  transfer_grayscale.cpp  transfer_grayscale.h
src/app/: app.cpp  app.h
src/paint/: mini_paint.cpp  mini_paint.h  paint.cpp  paint.h
src/utils/: binarize.cpp  binarize.h  blur_img.cpp  blur_img.h  convert_color.cpp  convert_color.h  effect.cpp  effect.h  equalize_histogram.cpp  equalize_histogram.h  filter.cpp  filter.h  flip_img.cpp  flip_img.h  rotate_img.cpp  rotate_img.h  sharpen_img.cpp  sharpen_img.h  task_queue.h  thread_pool.cpp  thread_pool.h  transfer_grayscale.cpp  transfer_grayscale.h
src/view/: WAdapatBinarize.qml  WBinarize.qml  WBlur.qml  WGaussBlur.qml  WTransfer.qml  main.qml
src/view/channel/: GrayChannel.qml  RgbChannel.qml
